<resources>
    <string name="app_name">GameEx</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email:</string>
    <string name="prompt_password">Password:</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hola">Hola:</string>
    <string name="direccion">Direccion:</string>
    <string name="pisos">Pisos</string>
    <string name="Dni">DNI:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="estado">Estado:</string>
    <string name="reporte_general">REPORTE GENERAL:</string>
    <string name="registrar">REGISTRAR</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="nuevo">NUEVO</string>
    <string name="usuarios">Usuarios</string>
    <string name="juegos">Juegos</string>
    <string name="mantenimientos">Mantenimientos</string>
    <string name="_0_no_disponoble_1_disponible">0:No Disponoble 1:Disponible</string>
    <string name="disponibilidad">0:No Disponoble 1:Disponible 2:Desarrollador, 3:Administrador</string>
</resources>
