<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:id="@+id/txtUsuario"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/Dni"/>

    <EditText
        android:id="@+id/dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"/>

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Nuevo">
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email" />

    <EditText
        android:id="@+id/Temail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password" />

    <EditText
        android:id="@+id/Tpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/estado" />

    <EditText
        android:id="@+id/estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/BTNGUARDAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Ejecutar"
        android:text="@string/guardar" />


    <Button
        android:id="@+id/BTNMOSTRAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="MostrarDatos"
        android:text="MOSTRAR  REGISTROS" />

    <Button
        android:id="@+id/BTNELIMINAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Eliminar"
        android:text="ELIMINAR" />

    </LinearLayout>

</ScrollView>