<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro de nuevo usuario"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/txtUsuario"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/Dni"/>

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Nuevo">
    </EditText>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"/>

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Nuevo">
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/BTNINSERTAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Ejecutar"
        android:text="@string/registrar"/>

</LinearLayout>