<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminConsoleActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:textSize="30dp"
        android:textStyle="bold"
        android:id="@+id/txtHola"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mantenimientos"
        android:textSize="35dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:paddingTop="90dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@android:color/transparent"
                android:id="@+id/btnUsuarios"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuarios"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/games"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@android:color/transparent"
                android:id="@+id/btnJuegos"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/juegos"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>